# ccFOAM

./: .travis.yml  CMakeLists.txt  README.md
applications/solvers/multiphase/: CMakeLists.txt
applications/utilities/preProcessing/: CMakeLists.txt
applications/utilities/surface/: CMakeLists.txt
src/: CMakeLists.txt
src/ODE/: CMakeLists.txt  include.cmake  target.cmake
src/OSspecific/: CMakeLists.txt
src/OSspecific/POSIX/: CMakeLists.txt  include.cmake  target.cmake
src/OpenFOAM/: CMakeLists.txt  include.cmake  target.cmake
src/OpenFOAM/global/: global.C
src/Pstream/: CMakeLists.txt
src/Pstream/dummy/: CMakeLists.txt  include.cmake  target.cmake
src/Pstream/mpi/: CMakeLists.txt  include.cmake  target.cmake
src/TurbulenceModels/: CMakeLists.txt
src/TurbulenceModels/compressible/: CMakeLists.txt  include.cmake  target.cmake
src/TurbulenceModels/incompressible/: CMakeLists.txt  include.cmake  target.cmake
src/TurbulenceModels/phaseCompressible/: include.cmake
src/TurbulenceModels/phaseIncompressible/: include.cmake
src/TurbulenceModels/turbulenceModels/: CMakeLists.txt  include.cmake  target.cmake
src/combustionModels/: CMakeLists.txt  include.cmake  target.cmake
src/conversion/: CMakeLists.txt  include.cmake  target.cmake
src/dummyThirdParty/: CMakeLists.txt
src/dummyThirdParty/MGridGen/: CMakeLists.txt  include.cmake  target.cmake
src/dummyThirdParty/metisDecomp/: CMakeLists.txt  include.cmake  target.cmake
src/dummyThirdParty/ptscotchDecomp/: CMakeLists.txt  include.cmake  target.cmake
src/dummyThirdParty/scotchDecomp/: CMakeLists.txt  include.cmake  target.cmake
src/dynamicFvMesh/: CMakeLists.txt  include.cmake  target.cmake
src/dynamicMesh/: CMakeLists.txt  include.cmake  target.cmake
src/edgeMesh/: CMakeLists.txt  include.cmake  target.cmake
src/engine/: CMakeLists.txt  include.cmake  target.cmake
src/fileFormats/: CMakeLists.txt  include.cmake  target.cmake
src/finiteVolume/: CMakeLists.txt  include.cmake  target.cmake
src/fvAgglomerationMethods/: CMakeLists.txt
src/fvAgglomerationMethods/MGridGenGamgAgglomeration/: CMakeLists.txt  include.cmake  target.cmake
src/fvAgglomerationMethods/pairPatchAgglomeration/: CMakeLists.txt  include.cmake  target.cmake
src/fvMotionSolver/: CMakeLists.txt  include.cmake  target.cmake
src/fvOptions/: CMakeLists.txt  include.cmake  target.cmake
src/genericPatchFields/: CMakeLists.txt  include.cmake  target.cmake
src/lagrangian/: CMakeLists.txt
src/lagrangian/DSMC/: CMakeLists.txt  include.cmake  target.cmake
src/lagrangian/basic/: CMakeLists.txt  include.cmake  target.cmake
src/lagrangian/coalCombustion/: CMakeLists.txt  include.cmake  target.cmake
src/lagrangian/distributionModels/: CMakeLists.txt  include.cmake  target.cmake
src/lagrangian/molecularDynamics/: CMakeLists.txt
src/lagrangian/solidParticle/: CMakeLists.txt  include.cmake  target.cmake
src/lagrangian/spray/: CMakeLists.txt  include.cmake  target.cmake
src/lagrangian/turbulence/: CMakeLists.txt  include.cmake  target.cmake
src/mesh/: CMakeLists.txt
src/mesh/autoMesh/: CMakeLists.txt  include.cmake  target.cmake
src/mesh/blockMesh/: CMakeLists.txt  include.cmake  target.cmake
src/mesh/extrudeModel/: CMakeLists.txt  include.cmake  target.cmake
src/meshTools/: CMakeLists.txt  include.cmake  target.cmake
src/parallel/: CMakeLists.txt
src/parallel/decompose/: CMakeLists.txt
src/parallel/distributed/: CMakeLists.txt  include.cmake  target.cmake
src/parallel/reconstruct/: CMakeLists.txt
src/postProcessing/: CMakeLists.txt
src/postProcessing/foamCalcFunctions/: CMakeLists.txt  include.cmake  target.cmake
src/postProcessing/functionObjects/: CMakeLists.txt
src/postProcessing/postCalc/: CMakeLists.txt  include.cmake  target.cmake
src/randomProcesses/: CMakeLists.txt  include.cmake  target.cmake
src/regionCoupled/: CMakeLists.txt  include.cmake  target.cmake
src/regionModels/: CMakeLists.txt
src/regionModels/pyrolysisModels/: CMakeLists.txt  include.cmake  target.cmake
src/regionModels/regionCoupling/: CMakeLists.txt  include.cmake  target.cmake
src/regionModels/regionModel/: CMakeLists.txt  include.cmake  target.cmake
src/regionModels/surfaceFilmModels/: CMakeLists.txt  include.cmake  target.cmake
src/regionModels/thermalBaffleModels/: CMakeLists.txt  include.cmake  target.cmake
src/renumber/: CMakeLists.txt
src/renumber/renumberMethods/: CMakeLists.txt  include.cmake  target.cmake
src/sampling/: CMakeLists.txt  include.cmake  target.cmake
src/sixDoFRigidBodyMotion/: CMakeLists.txt  include.cmake  target.cmake
src/surfMesh/: CMakeLists.txt  include.cmake  target.cmake
src/thermophysicalModels/: CMakeLists.txt
src/thermophysicalModels/SLGThermo/: CMakeLists.txt  include.cmake  target.cmake
src/thermophysicalModels/barotropicCompressibilityModel/: CMakeLists.txt  include.cmake  target.cmake
src/thermophysicalModels/basic/: CMakeLists.txt  include.cmake  target.cmake
src/thermophysicalModels/chemistryModel/: CMakeLists.txt  include.cmake  target.cmake
src/thermophysicalModels/laminarFlameSpeed/: CMakeLists.txt  include.cmake  target.cmake
src/thermophysicalModels/properties/: CMakeLists.txt
src/thermophysicalModels/radiation/: CMakeLists.txt  include.cmake  target.cmake
src/thermophysicalModels/reactionThermo/: CMakeLists.txt  include.cmake  target.cmake
src/thermophysicalModels/solidChemistryModel/: CMakeLists.txt  include.cmake  target.cmake
src/thermophysicalModels/solidSpecie/: CMakeLists.txt  include.cmake  target.cmake
src/thermophysicalModels/solidThermo/: CMakeLists.txt  include.cmake  target.cmake
src/thermophysicalModels/specie/: CMakeLists.txt  include.cmake  target.cmake
src/thermophysicalModels/thermophysicalFunctions/: CMakeLists.txt  include.cmake  target.cmake
src/topoChangerFvMesh/: CMakeLists.txt  include.cmake  target.cmake
src/transportModels/: CMakeLists.txt
src/transportModels/compressible/: CMakeLists.txt  include.cmake  target.cmake
src/triSurface/: CMakeLists.txt  include.cmake  target.cmake
(+1063 files in other folders)
