#
#   Copyright (C) 2014-15 Chris Copsey
#
#   This file is part of ccFOAM.
#
#   ccFOAM is free software: you can redistribute it and/or modify it under the
#   terms of the GNU General Public License as published by the Free Software
#   Foundation, either version 3 of the License, or (at your option) any later
#   version.
#
#   ccFOAM is distributed in the hope that it will be useful, but WITHOUT ANY
#   WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
#   FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more
#   details.
#
#   You should have received a copy of the GNU General Public License along
#   with ccFOAM.  If not, see <http://www.gnu.org/licenses/>.
#

add_subdirectory(Pstream)
add_subdirectory(OSspecific)
add_subdirectory(OpenFOAM)

add_subdirectory(engine)
add_subdirectory(dynamicMesh)
add_subdirectory(sixDoFRigidBodyMotion)
add_subdirectory(mesh)
add_subdirectory(finiteVolume)
add_subdirectory(parallel)
add_subdirectory(combustionModels)
add_subdirectory(transportModels)
add_subdirectory(fvAgglomerationMethods)
add_subdirectory(surfMesh)
add_subdirectory(meshTools)
add_subdirectory(TurbulenceModels)
add_subdirectory(renumber)
add_subdirectory(triSurface)
add_subdirectory(topoChangerFvMesh)
add_subdirectory(fvOptions)
add_subdirectory(regionModels)
add_subdirectory(fvMotionSolver)
add_subdirectory(regionCoupled)
add_subdirectory(fileFormats)
add_subdirectory(postProcessing)
add_subdirectory(randomProcesses)
add_subdirectory(genericPatchFields)
add_subdirectory(conversion)
add_subdirectory(lagrangian)
add_subdirectory(edgeMesh)
add_subdirectory(ODE)
add_subdirectory(dummyThirdParty)
add_subdirectory(thermophysicalModels)
add_subdirectory(sampling)
add_subdirectory(dynamicFvMesh)
