#
#   Copyright (C) 2014-15 Chris Copsey
#   
#   This file is part of ccFOAM.
#
#   ccFOAM is free software: you can redistribute it and/or modify it under the
#   terms of the GNU General Public License as published by the Free Software
#   Foundation, either version 3 of the License, or (at your option) any later
#   version.
#
#   ccFOAM is distributed in the hope that it will be useful, but WITHOUT ANY
#   WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
#   FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more
#   details.
#
#   You should have received a copy of the GNU General Public License along
#   with ccFOAM.  If not, see <http://www.gnu.org/licenses/>.
#

add_subdirectory(barotropicCompressibilityModel)
add_subdirectory(basic)
add_subdirectory(chemistryModel)
add_subdirectory(laminarFlameSpeed)
add_subdirectory(properties)
add_subdirectory(radiation)
add_subdirectory(reactionThermo)
add_subdirectory(SLGThermo)
add_subdirectory(solidChemistryModel)
add_subdirectory(solidSpecie)
add_subdirectory(solidThermo)
add_subdirectory(specie)
add_subdirectory(thermophysicalFunctions)
