#
#   Copyright (C) 2014-15 Chris Copsey
#   
#   This file is part of ccFOAM.
#
#   ccFOAM is free software: you can redistribute it and/or modify it under the
#   terms of the GNU General Public License as published by the Free Software
#   Foundation, either version 3 of the License, or (at your option) any later
#   version.
#
#   ccFOAM is distributed in the hope that it will be useful, but WITHOUT ANY
#   WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
#   FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more
#   details.
#
#   You should have received a copy of the GNU General Public License along
#   with ccFOAM.  If not, see <http://www.gnu.org/licenses/>.
#

add_subdirectory(applyBoundaryLayer)
add_subdirectory(boxTurb)
add_subdirectory(changeDictionary)
add_subdirectory(createExternalCoupledPatchGeometry)
add_subdirectory(dsmcInitialise)
add_subdirectory(engineSwirl)
add_subdirectory(faceAgglomerate)
add_subdirectory(foamUpgradeCyclics)
add_subdirectory(mapFields)
add_subdirectory(mapFieldsPar)
add_subdirectory(mdInitialise)
add_subdirectory(setFields)
add_subdirectory(viewFactorsGen)
add_subdirectory(wallFunctionTable)
